--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav__link" href="#staff">Escolhas da Equipe</a>
             </li>
             <li>
-              <a class="nav__link" href="#events">Eventos</a>
+              <a class="nav__link" href="events">Eventos</a>
             </li>
             <li>
               <a class="nav__link">Seja um membro</a>
@@ -164,7 +164,6 @@
             </p>
             <a href="#" class="events__more">Mais eventos &rarr;</a>
           </div>
-          <!-- Comece a criar a composição aqui -->
           <div class="events__cover">
             <img
               src="./images/cafe.png"
