--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
               <a class="nav__link" href="#staff">Escolhas da Equipe</a>
             </li>
             <li>
-              <a class="nav__link" href="events">Eventos</a>
+              <a class="nav__link" href="#events">Eventos</a>
             </li>
             <li>
               <a class="nav__link">Seja um membro</a>
@@ -179,13 +179,14 @@
               />
             </div>
 
-            <div class="person person_name_burbidge">
-              <p class="person__caption">Margaret Burbidge</p>
-              <img
-                src="./images/person_burbidge.png"
-                alt="Burbidge Photo"
-                class="person__image person__image_size_m"
-              />
+            <div>
+              <div class="person person_name_burbidge">
+                <p class="person__caption">Margaret Burbidge</p>
+                <img
+                  src="./images/person_burbidge.png"
+                  alt="Burbidge Photo"
+                  class="person__image person__image_size_m"
+                />
               </div>
 
               <div class="person person_name_cannon">
@@ -214,7 +215,6 @@
                   class="person__image person__image_size_m"
                 />
               </div>
-
             </div>
           </div>
         </section>
